# employee-app

./: .env.example  agent_store.json  config.py  docker-compose.yml  dockerfile  main.py  pyproject.toml
addresses/: repo.py  router.py  service.py
agent/: __init__.py  agent_config.py  ingest.py  router.py  tools.py
alembic/: env.py
alembic/versions/: 1657ffaebc87_index_for_email.py  1f3f02988930_postal_code_int_to_str_in_address.py  2aa5212fa7ab_add_address_mapping_to_employee.py  2e5e5cfb0013_employee_add_role_column_role.py  4b37483b4f47_add_assciations.py  50208300475c_employee_add_role_column_role.py  6de4f12c6ab1_init.py  718a49982ab1_init.py  73478a8cd6d3_init.py  b67702549be7_add_password_to_employee.py  bc5e4f95cf81_employee_add_column_status.py  dd61de65ecda_add_columnn_experience_in_employee.py  e1ba9acc6f10_back_population.py  e9ae891a96a2_department.py
associations/: repo.py  router.py  schemas.py  service.py
auth/: dependencies.py  router.py  schemas.py  service.py  utils.py
database/: __init__.py  connection.py
department/: repo.py  router.py  schemas.py  service.py
employees/: __init__.py  repo.py  router.py  schemas.py  service.py
exceptions/: __init__.py  handlers.py
middleware/: __init__.py  logger.py
models/: __init__.py  address.py  associations.py  department.py  employee.py  entity.py
repositories/: employee_repo.py
routers/: employee_router.py
services/: employee_service.py
tests/: conftest.py  test_auth_utils.py  test_department_service.py  test_employee_api.py  test_employee_get_by_id.py  test_employee_service.py  test_get_emp_by_id.py
