[project]
name = "employee-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.31.0",
    "dataclasses>=0.8",
    "dotenv>=0.9.9",
    "fastapi>=0.136.3",
    "logging>=0.4.9.6",
    "sqlalchemy>=2.0.50",
    "uvicorn>=0.48.0",
]
