[project]
name = "employee-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "dataclasses>=0.8",
    "dotenv>=0.9.9",
    "fastapi>=0.136.3",
    "logging>=0.4.9.6",
    "pydantic>=2.13.4",
    "pydantic[email]>=2.0.0",
    "pydantic-settings>=2.0.0",
    "sqlalchemy>=2.0.50",
    "uvicorn>=0.48.0",
    "bcrypt>=5.0.0",
    "python-jose[cryptography]>=3.5.0",
]

[dependency-groups]
dev = [
    "poethepoet>=0.46.0",
]
